--- a/index.html
+++ b/index.html
@@ -6,138 +6,162 @@
   <title>CONFESSION-LOG_0173</title>
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <style>
-    body {
+    html, body {
       margin: 0;
-      padding: 2em;
-      background-color: black;
-      color: #00ffee;
+      padding: 0;
+      background: black;
+      color: #00ffff;
       font-family: 'VT323', monospace;
-      font-size: 1.4em;
+      font-size: 20px;
+      overflow-x: hidden;
+    }
+
+    body {
+      padding: 2em;
       display: flex;
       flex-direction: column;
       align-items: center;
-      text-align: left;
     }
 
-    img {
-      width: 320px;
-      height: auto;
-      margin-bottom: 2em;
-      image-rendering: pixelated;
+    .glitch {
+      position: relative;
+      color: #ff00ff;
+      animation: glitchText 2s infinite;
     }
 
-    #output {
+    @keyframes glitchText {
+      0% {
+        text-shadow: 2px 0 #ff00ff, -2px 0 #00ffff;
+      }
+      25% {
+        text-shadow: -2px -2px #00ffff, 2px 2px #ff00ff;
+      }
+      50% {
+        text-shadow: 2px -2px #ff00ff, -2px 2px #00ffff;
+      }
+      75% {
+        text-shadow: 0 0 #ff00ff, 0 0 #00ffff;
+      }
+      100% {
+        text-shadow: 2px 0 #ff00ff, -2px 0 #00ffff;
+      }
+    }
+
+    .typewriter {
       white-space: pre-wrap;
-      max-width: 800px;
-      line-height: 1.6;
+      border-right: 2px solid #00ffff;
+      overflow: hidden;
+      animation: typing 6s steps(60, end), blink .75s step-end infinite;
+      width: 0;
+    }
+
+    @keyframes typing {
+      from { width: 0; }
+      to { width: 100%; }
+    }
+
+    @keyframes blink {
+      from, to { border-color: transparent; }
+      50% { border-color: #00ffff; }
     }
 
     .quote {
-      color: #ff66cc;
+      color: #ff00ff;
     }
 
-    .glitch-end {
-      font-size: 3em;
-      color: #ff0055;
-      text-align: center;
-      margin-top: 2em;
-      animation: glitch-end 0.4s infinite;
+    .buggy {
+      animation: screenBug 0.5s infinite;
+    }
+
+    @keyframes screenBug {
+      0% { transform: translate(0, 0); }
+      25% { transform: translate(-1px, 1px); }
+      50% { transform: translate(1px, -1px); }
+      75% { transform: translate(-1px, -1px); }
+      100% { transform: translate(1px, 1px); }
+    }
+
+    .screamer {
       display: none;
-      white-space: pre-wrap;
+      font-size: 5em;
+      color: #ff0000;
+      animation: screamerGlitch 0.1s infinite;
+      text-align: center;
+      position: fixed;
+      top: 30%;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 9999;
     }
 
-    @keyframes glitch-end {
-      0% {
-        transform: translate(0);
-        text-shadow: 2px 0 red, -2px 0 blue;
-      }
-      20% {
-        transform: translate(-3px, 2px);
-        text-shadow: -2px 0 red, 2px 0 blue;
-      }
-      40% {
-        transform: translate(3px, -1px);
-        text-shadow: 2px 2px red, -2px -2px blue;
-      }
-      60% {
-        transform: translate(-1px, 1px);
-        text-shadow: -1px -1px red, 1px 1px blue;
-      }
-      80% {
-        transform: translate(2px, -3px);
-        text-shadow: 0 0 red, 0 0 blue;
-      }
-      100% {
-        transform: translate(0);
-        text-shadow: 2px 0 red, -2px 0 blue;
-      }
-    }
-
-    @keyframes screenFlicker {
-      0% { opacity: 1; }
-      5% { opacity: 0.7; }
-      10% { opacity: 1; }
-      15% { opacity: 0.6; }
-      20% { opacity: 1; }
-      100% { opacity: 1; }
-    }
-
-    .flicker {
-      animation: screenFlicker 2s infinite;
+    @keyframes screamerGlitch {
+      0% { transform: translate(-50%, -50%) scale(1) rotate(0); }
+      20% { transform: translate(-52%, -48%) scale(1.1) rotate(2deg); }
+      40% { transform: translate(-48%, -52%) scale(0.9) rotate(-2deg); }
+      60% { transform: translate(-50%, -50%) scale(1.2) rotate(1deg); }
+      80% { transform: translate(-51%, -49%) scale(1) rotate(-1deg); }
+      100% { transform: translate(-50%, -50%) scale(1.3) rotate(0); }
     }
   </style>
 </head>
-<body>
-  <img src="giphy.gif" alt="Glitch gif">
-  <div id="output" class="flicker"></div>
-  <div id="glitchEnd" class="glitch-end">░░░ WE SEE YOU ░░░</div>
+<body class="buggy">
+  <img src="giphy.gif" alt="glitch gif" style="width: 300px; image-rendering: pixelated;">
+
+  <pre id="log" style="text-align: left; max-width: 800px;"></pre>
+
+  <div class="screamer" id="screamer">░░░ WE SEE YOU ░░░</div>
+
+  <audio id="screamSound" src="https://cdn.pixabay.com/audio/2022/03/26/audio_3b1981d9aa.mp3"></audio>
+
   <script>
-    const text = `CONFESSION-LOG_0173 :: ACCESS GRANTED  
-SYSTEM MESSAGE: ERROR_173: CONFESSION CORRUPTED  
+    const log = document.getElementById("log");
+    const screamer = document.getElementById("screamer");
+    const screamSound = document.getElementById("screamSound");
 
-Parsing soul fragment...  
-
-[IN LUMEN VERITAS]  
-. . .  
-
-██ Data stream unstable ██  
-
-Salvation Attempt: FAILED  
-
-SUBJECT 0173: <span class="quote">“I prayed. No one answered.”</span>  
-SUBJECT 0173: <span class="quote">“I heard laughter in the static.”</span>  
-
-Faith checksum: NULL  
-
-> SYSTEM RESPONSE:  
-     ░░░ WE SEE YOU ░░░`;
-
-    const output = document.getElementById('output');
-    const glitchEnd = document.getElementById('glitchEnd');
+    const lines = [
+      "CONFESSION-LOG_0173 :: ACCESS GRANTED",
+      "SYSTEM MESSAGE: ERROR_173: CONFESSION CORRUPTED",
+      "",
+      "Parsing soul fragment...",
+      "",
+      "[IN LUMEN VERITAS]",
+      "...",
+      "",
+      "██ Data stream unstable ██",
+      "",
+      "Salvation Attempt: FAILED",
+      "",
+      "SUBJECT 0173: <span class='quote'>\"I prayed. No one answered.\"</span>",
+      "SUBJECT 0173: <span class='quote'>\"I heard laughter in the static.\"</span>",
+      "",
+      "Faith checksum: NULL",
+      "",
+      "> SYSTEM RESPONSE:",
+      "░░░",
+      "░░░",
+      "░░░"
+    ];
 
     let i = 0;
-    function typeText() {
-      if (i < text.length) {
-        const char = text[i];
-        output.innerHTML += char;
 
-        if (char === '.') {
-          setTimeout(typeText, 200);
-        } else if (char === '\n') {
-          setTimeout(typeText, 300);
-        } else {
-          setTimeout(typeText, Math.random() * 40 + 20);
-        }
+    function printLine() {
+      if (i < lines.length) {
+        log.innerHTML += lines[i] + "\n";
         i++;
+        const delay = Math.random() * 300 + 100;
+        setTimeout(printLine, delay);
       } else {
-        // после таймаута появляется глитч-надпись
         setTimeout(() => {
-          glitchEnd.style.display = 'block';
+          screamer.style.display = "block";
+          screamSound.play();
+          document.body.classList.add("buggy");
         }, 1000);
       }
     }
 
-    window.onload = typeText;
+    window.onload = () => {
+      printLine();
+    };
   </script>
 </body>
 </html>
