--- a/index.html
+++ b/index.html
@@ -6,117 +6,95 @@
   <title>CONFESSION-LOG_0173</title>
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <style>
-    html, body {
+    body {
       margin: 0;
-      padding: 0;
-      background: black;
-      color: #00ffff;
+      background-color: black;
+      color: #00ffcc;
       font-family: 'VT323', monospace;
-      font-size: 20px;
       overflow-x: hidden;
     }
 
-    body {
+    .terminal {
+      white-space: pre-line;
       padding: 2em;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .glitch {
+      max-width: 1000px;
+      margin: 0 auto;
+      font-size: 1.4em;
       position: relative;
-      color: #ff00ff;
-      animation: glitchText 2s infinite;
-    }
-
-    @keyframes glitchText {
-      0% {
-        text-shadow: 2px 0 #ff00ff, -2px 0 #00ffff;
-      }
-      25% {
-        text-shadow: -2px -2px #00ffff, 2px 2px #ff00ff;
-      }
-      50% {
-        text-shadow: 2px -2px #ff00ff, -2px 2px #00ffff;
-      }
-      75% {
-        text-shadow: 0 0 #ff00ff, 0 0 #00ffff;
-      }
-      100% {
-        text-shadow: 2px 0 #ff00ff, -2px 0 #00ffff;
-      }
-    }
-
-    .typewriter {
-      white-space: pre-wrap;
-      border-right: 2px solid #00ffff;
-      overflow: hidden;
-      animation: typing 6s steps(60, end), blink .75s step-end infinite;
-      width: 0;
-    }
-
-    @keyframes typing {
-      from { width: 0; }
-      to { width: 100%; }
-    }
-
-    @keyframes blink {
-      from, to { border-color: transparent; }
-      50% { border-color: #00ffff; }
     }
 
     .quote {
-      color: #ff00ff;
+      color: fuchsia;
     }
 
-    .buggy {
-      animation: screenBug 0.5s infinite;
+    .glitch {
+      font-size: 2.2em;
+      font-weight: bold;
+      color: white;
+      animation: glitch 1s infinite;
+      text-align: center;
+      margin-top: 2em;
     }
 
-    @keyframes screenBug {
+    @keyframes glitch {
+      0% { text-shadow: 2px 0 red, -2px 0 blue; }
+      20% { text-shadow: -2px 0 red, 2px 0 blue; }
+      40% { text-shadow: 2px 2px red, -2px -2px blue; }
+      60% { text-shadow: -2px -2px red, 2px 2px blue; }
+      80% { text-shadow: 0 0 red, 0 0 blue; }
+      100% { text-shadow: 2px 0 red, -2px 0 blue; }
+    }
+
+    .shake {
+      animation: shake 0.5s infinite;
+    }
+
+    @keyframes shake {
       0% { transform: translate(0, 0); }
-      25% { transform: translate(-1px, 1px); }
-      50% { transform: translate(1px, -1px); }
-      75% { transform: translate(-1px, -1px); }
-      100% { transform: translate(1px, 1px); }
+      25% { transform: translate(1px, -1px); }
+      50% { transform: translate(-1px, 2px); }
+      75% { transform: translate(2px, 1px); }
+      100% { transform: translate(-1px, -2px); }
     }
 
     .screamer {
       display: none;
-      font-size: 5em;
-      color: #ff0000;
-      animation: screamerGlitch 0.1s infinite;
-      text-align: center;
       position: fixed;
-      top: 30%;
-      left: 50%;
-      transform: translateX(-50%);
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: black;
+      color: red;
+      font-size: 6em;
+      font-family: 'VT323', monospace;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
       z-index: 9999;
+      animation: glitch 0.3s infinite;
     }
 
-    @keyframes screamerGlitch {
-      0% { transform: translate(-50%, -50%) scale(1) rotate(0); }
-      20% { transform: translate(-52%, -48%) scale(1.1) rotate(2deg); }
-      40% { transform: translate(-48%, -52%) scale(0.9) rotate(-2deg); }
-      60% { transform: translate(-50%, -50%) scale(1.2) rotate(1deg); }
-      80% { transform: translate(-51%, -49%) scale(1) rotate(-1deg); }
-      100% { transform: translate(-50%, -50%) scale(1.3) rotate(0); }
+    .flash {
+      animation: flashBg 0.15s infinite;
+    }
+
+    @keyframes flashBg {
+      0% { background-color: black; }
+      50% { background-color: #111; }
+      100% { background-color: black; }
     }
   </style>
 </head>
-<body class="buggy">
-  <img src="giphy.gif" alt="glitch gif" style="width: 300px; image-rendering: pixelated;">
-
-  <pre id="log" style="text-align: left; max-width: 800px;"></pre>
-
+<body>
+  <audio id="sfx" src="https://upload.wikimedia.org/wikipedia/commons/1/19/Static.ogg"></audio>
+  <div class="terminal" id="terminal"></div>
   <div class="screamer" id="screamer">░░░ WE SEE YOU ░░░</div>
 
-  <audio id="screamSound" src="https://cdn.pixabay.com/audio/2022/03/26/audio_3b1981d9aa.mp3"></audio>
-
   <script>
-    const log = document.getElementById("log");
-    const screamer = document.getElementById("screamer");
-    const screamSound = document.getElementById("screamSound");
+    const terminal = document.getElementById('terminal');
+    const screamer = document.getElementById('screamer');
+    const sfx = document.getElementById('sfx');
 
     const lines = [
       "CONFESSION-LOG_0173 :: ACCESS GRANTED",
@@ -126,41 +104,51 @@
       "",
       "[IN LUMEN VERITAS]",
       "...",
-      "",
       "██ Data stream unstable ██",
       "",
       "Salvation Attempt: FAILED",
       "",
-      "SUBJECT 0173: <span class='quote'>\"I prayed. No one answered.\"</span>",
-      "SUBJECT 0173: <span class='quote'>\"I heard laughter in the static.\"</span>",
+      "<span class='quote'>SUBJECT 0173: \"I prayed. No one answered.\"</span>",
+      "<span class='quote'>SUBJECT 0173: \"I heard laughter in the static.\"</span>",
       "",
       "Faith checksum: NULL",
       "",
       "> SYSTEM RESPONSE:",
-      "░░░",
-      "░░░",
-      "░░░"
+      "░░░ WE SEE YOU ░░░"
+    ];
+
+    const randomErrors = [
+      "█ Fragment conflict █",
+      "::ERROR: memory leak::",
+      "!!! CORE VOW CORRUPTED !!!",
+      "&SIGIL BREACH&",
+      "#VOID RESPONSE DETECTED#"
     ];
 
     let i = 0;
 
-    function printLine() {
+    function typeLine() {
       if (i < lines.length) {
-        log.innerHTML += lines[i] + "\n";
+        terminal.innerHTML += lines[i] + "\n";
         i++;
-        const delay = Math.random() * 300 + 100;
-        setTimeout(printLine, delay);
+        // occasionally inject an error
+        if (Math.random() < 0.2) {
+          const error = randomErrors[Math.floor(Math.random() * randomErrors.length)];
+          terminal.innerHTML += error + "\n";
+        }
+        setTimeout(typeLine, 500 + Math.random() * 800);
       } else {
         setTimeout(() => {
-          screamer.style.display = "block";
-          screamSound.play();
-          document.body.classList.add("buggy");
-        }, 1000);
+          document.body.classList.add('flash');
+          screamer.style.display = 'flex';
+          screamer.classList.add('shake');
+          sfx.play();
+        }, 2000);
       }
     }
 
     window.onload = () => {
-      printLine();
+      typeLine();
     };
   </script>
 </body>
