--- a/index.html
+++ b/index.html
@@ -6,127 +6,140 @@
   <title>CONFESSION-LOG_0173</title>
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       background-color: black;
-      color: #00ffee;
+      color: #00ffff;
       font-family: 'VT323', monospace;
-      font-size: 1.2em;
-      padding: 2em;
-      overflow-x: hidden;
-      overflow-y: scroll;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      overflow: hidden;
     }
 
-    img {
-      display: block;
-      margin: 0 auto 2em auto;
-      width: 320px;
-      image-rendering: pixelated;
-    }
-
-    .typed-line {
-      white-space: pre-wrap;
-      line-height: 1.4em;
+    #container {
+      width: 90%;
+      max-width: 900px;
+      padding: 2rem;
+      border: 2px solid #00ffff;
+      background-color: rgba(0, 0, 0, 0.8);
+      position: relative;
+      z-index: 1;
+      text-align: center;
     }
 
     .quote {
       color: fuchsia;
     }
 
-    .glitch-text {
-      font-size: 2.5em;
-      color: red;
-      text-align: center;
-      animation: glitchEffect 0.3s infinite;
+    #glitchText {
       white-space: pre-wrap;
+      font-size: 1.6rem;
+      min-height: 200px;
     }
 
-    @keyframes glitchEffect {
-      0% { text-shadow: 2px 0 red, -2px 0 blue; transform: translate(0); }
-      20% { text-shadow: -2px 0 red, 2px 0 blue; transform: translate(-1px, 1px); }
-      40% { text-shadow: 2px 2px red, -2px -2px blue; transform: translate(1px, -1px); }
-      60% { text-shadow: -2px -2px red, 2px 2px blue; transform: translate(-1px, 1px); }
-      80% { text-shadow: 0 0 red, 0 0 blue; transform: translate(0); }
-      100% { text-shadow: 2px 0 red, -2px 0 blue; transform: translate(1px, 0); }
-    }
-
-    .hidden {
+    #screamer {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: black;
       display: none;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      z-index: 9999;
+      animation: flicker 0.3s infinite;
+    }
+
+    #screamer h1 {
+      font-size: 8rem;
+      color: red;
+      text-shadow: 0 0 15px red, 0 0 30px white;
+      animation: glitchScreamer 0.3s infinite;
+    }
+
+    @keyframes glitchScreamer {
+      0% { transform: translate(0); }
+      20% { transform: translate(-5px, 2px); }
+      40% { transform: translate(5px, -3px); }
+      60% { transform: translate(-3px, 5px); }
+      80% { transform: translate(3px, -2px); }
+      100% { transform: translate(0); }
+    }
+
+    @keyframes flicker {
+      0%, 100% { background-color: black; }
+      50% { background-color: #111; }
+    }
+
+    img {
+      max-width: 300px;
+      height: auto;
+      margin-bottom: 2rem;
+      image-rendering: pixelated;
     }
   </style>
 </head>
 <body>
-  <img src="giphy.gif" alt="Glitch gif">
-  <div id="text-container"></div>
-  <div id="screamer" class="glitch-text hidden">░░░ WE SEE YOU ░░░</div>
-  <audio id="typeSound" src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Typewriter-key.wav"></audio>
-  <audio id="screamSound" src="https://www.fesliyanstudios.com/play-mp3/4386" preload="auto"></audio>
+  <div id="screamer">
+    <h1>░░░ WE SEE YOU ░░░</h1>
+    <audio id="screamSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_31b9b4bbf4.mp3?filename=scream-6061.mp3"></audio>
+  </div>
+
+  <div id="container">
+    <img id="gif" src="giphy.gif" alt="Glitch gif">
+    <div id="glitchText"></div>
+    <audio id="typeSound" src="https://cdn.pixabay.com/download/audio/2022/03/03/audio_19f9e09f20.mp3?filename=keyboard-typing-14446.mp3"></audio>
+  </div>
 
   <script>
-    const lines = [
-      'CONFESSION-LOG_0173 :: ACCESS GRANTED',
-      'SYSTEM MESSAGE: ERROR_173: CONFESSION CORRUPTED',
-      '',
-      'Parsing soul fragment...',
-      '',
-      '[IN LUMEN VERITAS]',
-      '...',
-      '██ Data stream unstable ██',
-      '',
-      'Salvation Attempt: FAILED',
-      '',
-      'SUBJECT 0173: <span class="quote">“I prayed. No one answered.”</span>',
-      'SUBJECT 0173: <span class="quote">“I heard laughter in the static.”</span>',
-      '',
-      'Faith checksum: NULL',
-      '',
-      '> SYSTEM RESPONSE:',
-      '     ░░░ WE SEE YOU ░░░'
-    ];
+    const glitchText = document.getElementById("glitchText");
+    const screamer = document.getElementById("screamer");
+    const gif = document.getElementById("gif");
+    const typeSound = document.getElementById("typeSound");
+    const screamSound = document.getElementById("screamSound");
 
-    const container = document.getElementById('text-container');
-    const screamer = document.getElementById('screamer');
-    const typeSound = document.getElementById('typeSound');
-    const screamSound = document.getElementById('screamSound');
+    const part1 = `CONFESSION-LOG_0173 :: ACCESS GRANTED\nSYSTEM MESSAGE: ERROR_173: CONFESSION CORRUPTED\n\nParsing soul fragment...\n\n[IN LUMEN VERITAS]\n. . .\n\n██ Data stream unstable ██\n\nSalvation Attempt: FAILED\n\n<span class="quote">SUBJECT 0173: “I prayed. No one answered.”</span>\n<span class="quote">SUBJECT 0173: “I heard laughter in the static.”</span>\n\nFaith checksum: NULL\n\n> SYSTEM RESPONSE:`;
 
-    let currentLine = 0;
+    const scaryEnding = `░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░\n░░░░░░░░░░░░░░░░░░░░░ WE SEE YOU ░░░░░░░░░░░░░░░░░\n░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░`;
 
-    function typeLine(line, idx, cb) {
-      const p = document.createElement('p');
-      p.className = 'typed-line';
-      container.appendChild(p);
-      let i = 0;
-      const interval = setInterval(() => {
-        p.innerHTML = line.slice(0, i);
-        if (line[i - 1] !== ' ' && line[i - 1] !== undefined) typeSound.play();
-        i++;
-        if (i > line.length) {
-          clearInterval(interval);
-          cb();
+    async function typeOut(text, delay = 75) {
+      glitchText.innerHTML = "";
+      for (let char of text) {
+        if (char === '\\n') {
+          glitchText.innerHTML += "<br>";
+        } else {
+          glitchText.innerHTML += char;
+          typeSound.currentTime = 0;
+          typeSound.play();
         }
-      }, 80);
-    }
-
-    function typeAllLines() {
-      if (currentLine < lines.length) {
-        typeLine(lines[currentLine], currentLine, () => {
-          currentLine++;
-          setTimeout(typeAllLines, 400);
-        });
-      } else {
-        document.body.addEventListener('click', triggerScreamer, { once: true });
+        await new Promise(res => setTimeout(res, delay));
       }
     }
 
-    function triggerScreamer() {
-      container.innerHTML = '';
-      document.body.style.backgroundColor = 'black';
-      screamer.classList.remove('hidden');
+    async function startSequence() {
+      await typeOut(part1);
+      await new Promise(res => setTimeout(res, 2500));
+      glitchText.innerHTML = "";
+
+      await typeOut(scaryEnding, 50);
+      await new Promise(res => setTimeout(res, 2000));
+
+      gif.style.display = "none";
+      document.getElementById("container").style.display = "none";
+      screamer.style.display = "flex";
       screamSound.play();
     }
 
     window.onload = () => {
-      typeAllLines();
+      startSequence();
     }
   </script>
 </body>
